# trust-layer-robot-bridge-

./: .dockerignore  .env.e1.local.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  requirements-jetson-local-ai.txt  requirements.txt  update_bridge.sh
.githooks/: pre-commit
bridge/: adapter_base.py  connectivity_monitor.py  e1_adapter.py  e1_server.py  event_buffer.py  h1_adapter.py  h1_server.py  http_adapter.py  license_manager.py  local_behavior.py  local_brain.py  local_cache.py  local_navigator.py  main.py  mock_adapter.py  mujoco_adapter.py  profession_deployer.py  safety_pipeline.py  voice_fallback.py  watchdog.py
bridge_safety_gate/: Dockerfile  gate.go  gate_test.go  go.mod  main.go  rule_engine.go  rules.go
docs/: E1_BOOTSTRAP_ARCHITECTURE.md  JETSON_LOCAL_AI.md  NOETIX_TRUST_LAYER_RUNBOOK_RU.md  OPERATOR_E1.md  ROBOT_SETUP.md  Отчет_18.04.26.md
libs/ontology/: __init__.py  action_gate.py  knowledge_diff.py  rule_engine.py  semantic_classifier.py  world_model.py
libs/ontology/ontology/: __init__.py  action_composer.py  action_gate.py  action_gates.py  adaptive_translator.py  affordance_model.py  biological.json  (+57 more)
native/: CMakeLists.txt  e1_dds_bridge.cpp
robots/: e1.yaml  h1.yaml  n2.yaml
scripts/: bootstrap_e1_robot.sh  download_wheels.ps1  e1_collect_telemetry.py  e1_dialog.py  start_e1_bridge.sh  start_e1_server.sh  start_e1_stack.sh  test_e1.sh
scripts/e1_bootstrap/: README.md  lib.sh
tests/: test_connectivity_monitor.py  test_e1_adapter.py  test_h1_adapter.py  test_mock_adapter.py  test_safety_pipeline.py  test_watchdog.py
(+26 files in other folders)
